--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,81 @@
 <app-header></app-header>
+
+<div class="container w-100">
+    <div class="row bg-primary p-5 w-100">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4 mt-5 text-light fw-bolder">
+            <h1>Easiest way to make your favorite dish</h1>
+            <p>Explore 100+ recipes...</p>
+            <h4 style="font-size: 40px;" class="text-warning fw-bolder">Eat</h4>
+            <h4 style="font-size: 35px;" class="text-warning fw-bolder">Cook</h4>
+            <h4 style="font-size: 30px;" class="text-warning fw-bolder">Repeat</h4>
+            <a routerLink="/recipes" class="btn btn-warning text-light fw-bolder">Explore Our Recipies</a>
+        </div>
+        <div class="col-lg-6">
+            <img class="food-img"
+                src="https://th.bing.com/th/id/R.a9caf544e96691b39893bb48c08c65bb?rik=auKFdVTUmlL0cA&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fpng-plate-of-food--600.png&ehk=tmQ5jwDlt1f5vC78EN4ZPrzdKs0Cnr7kO0dDVXnwsr0%3d&risl=&pid=ImgRaw&r=0"
+                alt="">
+        </div>
+    </div>
+    <!--Popular recipes-->
+    <div class="my-3 p-5">
+        <h2>Popular recipes of the week</h2>
+        <div class="d-flex justify-content-between">
+            <p>Our most popular recipe of the week</p>
+            <a routerLink="/recipes">View all</a>
+        </div>
+        <div class="row my-3">
+            <div class="col-lg-4 d-flex">
+                <div class="p-3">
+                    <img width="70%" src="https://cdn.dummyjson.com/recipe-images/1.webp" alt="">
+                    <div class="card-body">
+                        <h4>name</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-8"></div>
+    </div>
+    <!--Banner-->
+    <div style="height: 400px;background-repeat: no-repeat;background-size: cover;background-image: url(https://png.pngtree.com/thumb_back/fh260/back_our/20190620/ourmid/pngtree-food-seasoning-food-banner-image_169169.jpg);"
+        class="row align-items-center my-5">
+        <div class="col-lg-6"></div>
+        <div class="col-lg-6">
+            <div class="bg-light rounded p-3 w-75">
+                <h5>50+ Recipes that quick and fast</h5>
+                <p>Find the perfect food ideas to start your day...</p>
+            </div>
+        </div>
+
+    </div>
+    <!--download-->
+    <div style="height: 500px;" class="my-3 row text-light align-items-center bg-success rounded p-5">
+        <div class="col-lg-6">
+            <img style="width: 400px;margin-left: 100px;" src="https://www.pngrepo.com/png/217136/512/playstore.png"
+                alt="">
+        </div>
+        <div class="col-lg-6 text-center">
+            <h3>Download App</h3>
+            <h6>Download the App from App Store or <br> Google Play foe better experience </h6>
+            <div class="d-flex justify-content-center align-items-center">
+                <img width="200px" src="https://ae01.alicdn.com/kf/S2636f784a5004820942cb648a4ffc308J/272x80.png"
+                    alt="">
+                <img width="300px"
+                    src="https://www.freepnglogos.com/uploads/app-store-logo-png/download-on-the-app-store-logo-png-23.png"
+                    alt="">
+            </div>
+        </div>
+    </div>
+    <!--client testimonials-->
+    <div class="text-center my-5">
+        <h2>Client Testimonials</h2>
+        <marquee>
+            <div class="d-flex my-5">
+                <div class="rounded border w-25 p-2 shadow me-3">
+                    <h5>Item</h5>
+                    <p style="white-space: normal;width: 100%;text-align: justify;">Cusine</p>
+                </div>
+            </div>
+        </marquee>
+    </div>
+</div>
