about,login,recipe pages

--- a/client/src/app/about/about.component.html
+++ b/client/src/app/about/about.component.html
@@ -1,2 +1,33 @@
 <app-header></app-header>
-<p>about works!</p>
+
+<div class="container">
+    <div style="height: 400px;" class="row">
+    </div>
+    <div class="row align-items-center my-5 mt-5">
+        <div class="col-lg-6 bg-success">
+            <img width="100%" src="https://png.pngtree.com/png-clipart/20210917/ourmid/pngtree-indian-food-talley-curry-with-rice-png-image_3932417.jpg" alt="">
+        </div>
+        <div class="col-lg-6" style="margin-top: 100px;">
+            <h2>Welcome to <span class="text-warning">Flavour fusion</span></h2>
+            <p>Discover 100+ recipes in your hand with the best recipe provider</p>
+        </div>
+    </div>
+    <div class="row align-items-center my-5 mt-5">
+        <div class="col-lg-2">
+        </div>
+        <div class="col-lg-4">
+            <h2>About Us</h2>
+            <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolor dignissimos facilis voluptatum quae non blanditiis necessitatibus nulla. Labore ea recusandae nam voluptate perspiciatis incidunt molestias? Sunt dolor consectetur incidunt.</p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quidem possimus </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quidem possimus </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quidem possimus </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quidem possimus </li>
+            </ul>
+        </div>
+        <div class="col-lg-6 mt-5 image-fluid">
+            <img width="300px" src="https://png.pngtree.com/png-clipart/20220719/original/pngtree-illustration-of-male-chef-png-image_8364030.png" alt="">
+        </div>
+    </div>
+
+</div>
