--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<div style="height:100vh;" class="container d-flex justify-content-center align-items-center flex-column">
+    <h2>Login</h2>
+    <p>Explore 100+ recipes in your hand...</p>
+    <div style="width: 400px;" class="shadow border rounded p-5 mt-5">
+        <div class="mb-3 text-center">
+            <h3><i class="fa-solid fa-utensils fa-flip me-2 fs-2"></i>Recipe World</h3>
+        </div>
+        <form>
+            <div class="mb-3 text-center">
+                <input type="email" name="email" formControlName="email" placeholder="Enter your Email" class="form-control">
+            </div>
+            <div class="mb-3 text-center">
+                <input type="password" name="password" formControlName="password" placeholder="Enter your Password" class="form-control">
+            </div>
+            <div class="d-grid">
+                <button class="btn btn-success">Login</button>
+            </div>
+        </form>
+
+    </div>
+</div>
