--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,1 +1,38 @@
-<p>register works!</p>
+<div class="container">
+    <div style="height: 100vh;" class="row align-items-center">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4">
+            <h2 class="text-center">Register</h2>
+            <p>Explore 100+ recipes in your hand...</p>
+            <div style="width: 400px;" class="shadow border rounded p-5 mt-5">
+                <div class="mb-3 text-center">
+                    <h3><i class="fa-solid fa-utensils fa-flip me-2 fs-2"></i>Flavour Fusion</h3>
+                </div>
+                <form>
+                    <div class="mb-3 text-center">
+                        <input type="text" name="username" formControlName="email" placeholder="Enter your Username" class="form-control">
+                    </div>
+                    <div class="mb-3 text-center">
+                        <input type="email" name="email" formControlName="email" placeholder="Enter your Email" class="form-control">
+                    </div>
+                    <div class="mb-3 text-center">
+                        <input type="password" name="password" formControlName="password" placeholder="Enter your Password" class="form-control">
+                    </div>
+                    <div class="d-grid">
+                        <button class="btn btn-success">Login</button>
+                    </div>
+                </form>
+        </div>
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4 p-3">
+            <h2>Create Account</h2>
+            <h5>What will you get ?</h5>
+            <ul>
+                <li>Different recipes</li>
+                <li>Easy way to male recipe</li>
+                <li>Save your favourite recipe</li>
+                <li>Download your recipes</li>
+            </ul>
+        </div>
+    </div>
+</div>
