--- a/client/src/app/recipe/recipe.component.html
+++ b/client/src/app/recipe/recipe.component.html
@@ -5,7 +5,7 @@
             <div class="container">
                 <h5>Filter</h5>
                 <button class="btn mt-5">All</button>
-                
+
                 <!-- Cuisine Type -->
                 <button class="btn dropdown-toggle mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#cuisineType" aria-expanded="false" aria-controls="cuisineType">
                     Cuisine Type
@@ -37,6 +37,23 @@
 
             </div>
         </div>
-        <div class="col-lg-8"></div>
+        <div class="col-lg-8">
+            <div class="d-flex justify-content-between align-items-center">
+                <h2>All Recipes</h2>
+                <input type="text" class="form-control w-50" placeholder="search your recipes">
+            </div>
+            <div class="row my-3">
+                <div class="col-lg-4">
+                    <div class="p-3">
+                        <img width="100%" src="https://cdn.dummyjson.com/recipe-images/2.webp" alt="">
+                        <div class="card-body">
+                            <h4>name</h4>
+                            <p>Cusine : <span class="text-danger"></span></p>
+                            <p>MealType : <span class="text-danger"></span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
