--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -1,2 +1,83 @@
 <app-header></app-header>
-<p>contact works!</p>
+<div class="container my-5">
+    <div style="height: 350px;" class="bg-success row align-items-center">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8 text-center text-light">
+            <h2>Contact Us</h2>
+            <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorum repudiandae vero, aperiam, voluptatem eum asperiores sit voluptatum cupiditate tempora doloremque? Obcaecati odio quasi exercitationem quis dolor? Minima, facere at?</p>
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
+    <div style="height: 650px;" class="row align-items-center my-5">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4">
+            <h2>Get in Touch</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ab pariatur distinctio mollitia. Sit hic dolorem, obcaecati natus inventore voluptatem error perspiciatis nulla enim totam cum, fuga aliquam explicabo veniam.</p>
+            <div class="d-flex">
+                <div style="width: 40px; height: 40px;" class="rounded-circle bg-success d-flex justify-content-center align-items-center text-light me-3">
+                    <i class="fa-solid fa-location-dot" style="color: #63E6BE;"></i>
+                </div>
+                <div>
+                    <h3>Address</h3>
+                    <p class="text-secondary">X003, NewYork</p>
+                </div>
+            </div>
+            <div class="d-flex">
+                <div style="width: 40px; height: 40px;" class="rounded-circle bg-success d-flex justify-content-center align-items-center text-light me-3">
+                    <i class="fa-solid fa-envelope" style="color: #63E6BE;"></i>
+                </div>
+                <div>
+                    <h3>Email</h3>
+                    <p class="text-secondary">{{demoMail}}</p>
+                </div>
+            </div>
+            <div class="d-flex">
+                <div style="width: 40px; height: 40px;" class="rounded-circle bg-success d-flex justify-content-center align-items-center text-light me-3">
+                    <i class="fa-solid fa-phone" style="color: #63E6BE;"></i>
+                </div>
+                <div>
+                    <h3>Phone No</h3>
+                    <p class="text-secondary">+045-123456789</p>
+                </div>
+            </div>
+            <hr>
+            <h2>Follow us on</h2>
+            <div class="d-flex mt-4">
+                <div style="width: 40px; height: 40px;" class="rounded-circle bg-success d-flex justify-content-center align-items-center text-light me-3">
+                    <i class="fa-brands fa-facebook" style="color: #63E6BE;"></i>
+                </div>
+                <div style="width: 40px; height: 40px;" class="rounded-circle bg-success d-flex justify-content-center align-items-center text-light me-3">
+                    <i class="fa-brands fa-instagram" style="color: #63E6BE;"></i>
+                </div>
+                <div style="width: 40px; height: 40px;" class="rounded-circle bg-success d-flex justify-content-center align-items-center text-light me-3">
+                    <i class="fa-brands fa-x-twitter" style="color: #63E6BE;"></i>
+                </div>
+                <div style="width: 40px; height: 40px;" class="rounded-circle bg-success d-flex justify-content-center align-items-center text-light me-3">
+                    <i class="fa-brands fa-tiktok" style="color: #63E6BE;"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-4">
+            <form class="border shadow rounded p-5">
+                <h3>Client Testimonials</h3>
+                <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="name">
+                </div>
+                <div class="mb-3">
+                    <input type="email" class="form-control" placeholder="email">
+                </div>
+                <div class="mb-3">
+                    <textarea id="" class="form-control" placeholder="message"></textarea>
+                </div>
+                <p style="text-align: justify;" class="text-secondary">
+                    By submitting, your agreeing the terms & conditions of our website
+                </p>
+                <div class="float-end">
+                    <button class="text-light btn btn-success">Submit</button>
+                </div>
+            </form>
+        </div>
+        <div class="col-lg-1"></div>
+    </div>
+</div>
