--- a/client/src/app/recipe/recipe.component.html
+++ b/client/src/app/recipe/recipe.component.html
@@ -11,14 +11,14 @@
                     Cuisine Type
                 </button>
                 <div class="collapse mt-2" id="cuisineType">
-                    <button class="btn">Italian</button>
-                    <button class="btn">Asian</button>
-                    <button class="btn">American</button>
-                    <button class="btn">Mexican</button>
-                    <button class="btn">Indian</button>
-                    <button class="btn">Pakistani</button>
-                    <button class="btn">Japanese</button>
-                    <button class="btn">Thai</button>
+                    <button class="btn" (click)="filterRecipes('cusine','Italian')" >Italian</button>
+                    <button class="btn" (click)="filterRecipes('cusine','Asian')" >Asian</button>
+                    <button class="btn" (click)="filterRecipes('cusine','American')" >American</button>
+                    <button class="btn" (click)="filterRecipes('cusine','Mexican')" >Mexican</button>
+                    <button class="btn" (click)="filterRecipes('cusine','Indian')" >Indian</button>
+                    <button class="btn" (click)="filterRecipes('cusine','Pakistani')" >Pakistani</button>
+                    <button class="btn" (click)="filterRecipes('cusine','Japanese')" >Japanese</button>
+                    <button class="btn" (click)="filterRecipes('cusine','Thai')" >Thai</button>
                 </div>
 
                 <!-- Meal Type -->
@@ -26,13 +26,13 @@
                     Meal Type
                 </button>
                 <div class="collapse mt-2" id="mealType">
-                    <button class="btn">Dinner</button>
-                    <button class="btn">Lunch</button>
-                    <button class="btn">Dessert</button>
-                    <button class="btn">Appetizer</button>
-                    <button class="btn">Breakfast</button>
-                    <button class="btn">Beverage</button>
-                    <button class="btn">Salad</button>
+                    <button class="btn" (click)="filterRecipes('mealType','Dinner')" >Dinner</button>
+                    <button class="btn" (click)="filterRecipes('mealType','Lunch')" >Lunch</button>
+                    <button class="btn" (click)="filterRecipes('mealType','Dessert')" >Dessert</button>
+                    <button class="btn" (click)="filterRecipes('mealType','Appetizer')" >Appetizer</button>
+                    <button class="btn" (click)="filterRecipes('mealType','Breakfast')" >Breakfast</button>
+                    <button class="btn" (click)="filterRecipes('mealType','Beverage')" >Beverage</button>
+                    <button class="btn" (click)="filterRecipes('mealType','Salad')" >Salad</button>
                 </div>
 
             </div>
@@ -40,19 +40,26 @@
         <div class="col-lg-8">
             <div class="d-flex justify-content-between align-items-center">
                 <h2>All Recipes</h2>
-                <input type="text" class="form-control w-50" placeholder="search your recipes">
+                <input type="text" [(ngModel)]="searchKey" class="form-control w-50" placeholder="search your recipes">
             </div>
             <div class="row my-3">
-                <div class="col-lg-4">
-                    <div class="p-3">
-                        <img width="100%" src="https://cdn.dummyjson.com/recipe-images/2.webp" alt="">
-                        <div class="card-body">
-                            <h4>name</h4>
-                            <p>Cusine : <span class="text-danger"></span></p>
-                            <p>MealType : <span class="text-danger"></span></p>
+                @for (recipe of allRecipes; track $index) {
+                    <div class="col-lg-4">
+                        <div class="p-3">
+                            <img width="100%" [src]="recipe.image" alt="">
+                            <div class="card-body">
+                                <h4>{{recipe.image}}</h4>
+                                <p>Cusine : <span class="text-danger">{{recipe.Cusine}}</span></p>
+                                <p>MealType : <span class="text-danger">{{recipe.mealType}}</span></p>
+                            </div>
                         </div>
                     </div>
-                </div>
+                }
+                @if ((allRecipes|search:searchKey).length==0){
+                    <div class="text-danger fw-bolder">
+                        No Rcipes found...
+                    </div>
+                }
             </div>
         </div>
     </div>
