--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -59,22 +59,22 @@
         </div>
         <div class="col-lg-1"></div>
         <div class="col-lg-4">
-            <form class="border shadow rounded p-5">
+            <form  [formGroup]="testimonyForm" (ngSubmit)="submitTestimony()" class="border shadow rounded p-5">
                 <h3>Client Testimonials</h3>
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="name">
+                    <input name="name" type="text" class="form-control" placeholder="name">
                 </div>
                 <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="email">
+                    <input name="email" type="email" class="form-control" placeholder="email">
                 </div>
                 <div class="mb-3">
-                    <textarea id="" class="form-control" placeholder="message"></textarea>
+                    <textarea name="message" id="" class="form-control" placeholder="message"></textarea>
                 </div>
                 <p style="text-align: justify;" class="text-secondary">
                     By submitting, your agreeing the terms & conditions of our website
                 </p>
                 <div class="float-end">
-                    <button class="text-light btn btn-success">Submit</button>
+                    <button type="submit" class="text-light btn btn-success">Submit</button>
                 </div>
             </form>
         </div>
