controller and router

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -5,15 +5,23 @@
         <div class="mb-3 text-center">
             <h3><i class="fa-solid fa-utensils fa-flip me-2 fs-2"></i>Recipe World</h3>
         </div>
-        <form>
+        <form [formGroup]="loginForm" (ngSubmit)="login()" >
             <div class="mb-3 text-center">
                 <input type="email" name="email" formControlName="email" placeholder="Enter your Email" class="form-control">
             </div>
+            @if(loginForm.get('email')?.errors && loginForm.get('email')?.touched){
+                <div class="text-danger fw-bolder">*Invalid email</div>
+                }
+
             <div class="mb-3 text-center">
                 <input type="password" name="password" formControlName="password" placeholder="Enter your Password" class="form-control">
             </div>
+            @if(loginForm.get('password')?.errors && loginForm.get('password')?.touched){
+                <div class="text-danger fw-bolder">*Invalid password</div>
+                }
+
             <div class="d-grid">
-                <button class="btn btn-success">Login</button>
+                <button type="submit" class="btn btn-success">Login</button>
             </div>
         </form>
 
