view single recipe

--- a/client/src/app/view-recipe/view-recipe.component.html
+++ b/client/src/app/view-recipe/view-recipe.component.html
@@ -1,49 +1,53 @@
 <app-header></app-header>
 <div class="container my-5">
-    name
+    {{recipe.name}}
     <div class="row mb-5">
         <div class="col-lg-6">
             <a routerLink="/recipes">Back to recipes</a>
-            <img class="img-fluid my-5" src="recipe.img" alt="no image">
+            <img class="img-fluid my-5" [src]="recipe.img" alt="no image">
             <div class="d-flex justify-content-between">
                 <button class="btn btn-primary">Saved Recipes</button>
                 <button class="btn btn-success">Download Recipes</button>
             </div>
         </div>
         <div class="col-lg-6">
-            <h1>name</h1>
+            <h1>{{recipe.name}}</h1>
             <div class="d-flex justify-content-between my-5">
-                <p class="fw-bolder">Cuisine:</p>
-                <p class="fw-bolder">Servings:</p>
-                <p class="fw-bolder">Mode of cooking:</p>
+                <p class="fw-bolder">Cuisine: {{recipe.Cuisine}}</p>
+                <p class="fw-bolder">Servings:{{recipe.Servings}}</p>
+                <p class="fw-bolder">Mode of cooking:{{recipe.difficulty}}</p>
             </div>
             <div class="d-flex justify-content-evenly">
                 <div class="d-flex flex-column align-items-center">
                     <img height="70px" src="https://static.vecteezy.com/system/resources/previews/019/873/849/original/clock-icon-transparent-free-icon-free-png.png" alt="">
-                    <p>Prepration Time</p>
+                    <p>Prepration Time {{recipe}}</p>
                     <h6><span class="text-danger">6</span>Minutes</h6>
                 </div>
                 <div class="d-flex flex-column align-items-center">
                     <img height="70px" src="https://png.pngtree.com/png-clipart/20220911/original/pngtree-chef-hat-and-cooking-logo-png-image_8538758.png" alt="">
                     <p>Cooking</p>
-                    <h6><span class="text-danger">20</span>Minutes</h6>
+                    <h6><span class="text-danger">{{recipe.cookTimeMinutes}}</span>Minutes</h6>
                 </div>
                 <div class="d-flex flex-column align-items-center">
                     <img height="70px" src="https://cdn1.iconfinder.com/data/icons/fitness-sport/512/calories-512.png" alt="">
                     <p>Calories per unit</p>
-                    <h6><span class="text-danger">300</span></h6>
+                    <h6><span class="text-danger">{{recipe.caloriesPerServings}}</span></h6>
                 </div>
             </div>
             <div class="my-5">
                 <h1>Ingredients Needed</h1>
                 <ol>
-                    <li>Item</li>
+                    @for(item of recipe.ingredients;track $index){
+                        <li>{{item}}</li>
+                    }
                 </ol>
             </div>
             <div class="my-5">
                 <h1>Cooking Instruction</h1>
                 <ol>
-                    <li>Item</li>
+                    @for(item of recipe.instructions; track $index){
+                        <li>{{item}}</li>
+                    }
                 </ol>
             </div>
         </div>
@@ -52,16 +56,16 @@
     <div class="mb-5">
         <h1>Related Items</h1>
         <div class="row mt-2">
-            <div class="row mt-2">
-                <div class="col-lg-3">
-                    <div class="p-3">
-                        <img width="100%" src="item.image" alt="no-image">
-                        <div class="card-body">
-                            <p>item.name</p>
+                @for(item of allRelatedRecipes; track $index){
+                    <div class="col-lg-3">
+                        <div class="p-3" routerLink="/recipes/{{item._id}}/view">
+                            <img width="100%" [src]="item.image" alt="no-image">
+                            <div class="card-body">
+                                <p class="text-danger fw-bolder">{{item.name}}</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                }
         </div>
     </div>
 </div>
