save and remove recipe

--- a/client/src/app/saved-recipe/saved-recipe.component.html
+++ b/client/src/app/saved-recipe/saved-recipe.component.html
@@ -1,1 +1,23 @@
-<p>saved-recipe works!</p>
+<app-header></app-header>
+<div class="container my-5">
+    <h1 class="text-warning fw-bolder">Your saved Recipes</h1>
+    <div class="row my-5">
+        @if(allRecipes.length>0){
+            @for(recipe of allRecipes;track $index){
+                <div class="col-lg-3">
+                    <div class="p-3">
+                        <img routerLink="/recipes/{{recipe.recipeId}}/view" class="card-img-top-rounded" width="100%" [src]="recipe.image" alt="">
+                        <div class="d-flex justify-content-between mt-2">
+                            <h5 class="text-success">{{recipe.name}}</h5>
+                            <button class="btn"><i class="fa-solid fa-trash text-danger"></i></button>
+                        </div>
+                    </div>
+                </div>
+            }
+        }@else {
+            <div class="fw-bolder text-danger">
+                Your Recipe Collection is Empty...
+            </div>
+        }
+    </div>
+</div>
