--- a/client/src/app/admin/users/users.component.html
+++ b/client/src/app/admin/users/users.component.html
@@ -1,1 +1,28 @@
-<p>users works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-2 bg-success">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div class="col-10">
+            <h1 class="text-center text-primary fw-bolder">All-Users List</h1>
+            <table class="table shadow my-5">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (item of allUsers; track $index; let i=$index){
+                    <tr>
+                        <td>{{i+1}}</td>
+                        <td>{{user.username}}</td>
+                        <td>{{user.email}}</td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
