--- a/client/src/app/admin/request/request.component.html
+++ b/client/src/app/admin/request/request.component.html
@@ -15,7 +15,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @for (item of allTestimonials: track $index; let i=$index){
+                    @for (item of allTestimonials; track $index; let i=$index){
                     <tr>
                         <td>{{i+1}}</td>
                         <td>{{item.name}}</td>
@@ -23,10 +23,10 @@
                         <td>{{item.message}}</td>
                         @if(item.status =='pending'){
                             <div class="d-flex">
-                                <button class="btn btn-success me-2"><i class="fa-solid fa-check"></i></button>
-                                <button class="btn btn-danger me-2"><i class="fa-solid fa-check"></i></button>
+                                <button class="btn btn-success me-2" (click)="getUpdatedTestimony(item._id,'Approved')"><i class="fa-solid fa-check"></i></button>
+                                <button class="btn btn-danger me-2" (click)="getUpdatedTestimony(item._id,'Rejected')"><i class="fa-solid fa-check"></i></button>
                             </div>
-                        }@else if(item.status == 'approved' ){
+                        }@else if(item.status == 'Approved' ){
                             <button class="btn btn-success" >Approved</button>
                         }@else{
                             <button class="btn btn-danger">Rejected</button>
